# anibal-rinha-2025

./: Cargo.toml  Makefile  README.md  docker-compose.yaml
core/: Cargo.toml  Dockerfile
core/src/: main.rs
core/src/config/: settings.rs
core/src/consumers/: consume_payment.rs  mod.rs
core/src/message/: consumer.rs  mod.rs  producer.rs
core/src/models/: mod.rs  payment.rs
core/src/outbound/: mod.rs  payment_processor.rs
core/src/queue/: mod.rs  redis.rs
core/src/routes/: mod.rs  payment.rs
core/src/serializers/: decimal.rs
core/src/store/: mod.rs  payment.rs
core/src/usecases/: get_summary.rs  mod.rs  process_payment.rs
proxy/: Cargo.toml  Dockerfile
proxy/src/: main.rs
proxy/src/config/: mod.rs  settings.rs
