[package]
name = "core"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
config = "0.15.13"
reqwest = { version = "0.12.22", features = ["json"] }
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["full"] }
bytes = "1.10.1"
futures = "0.3.31"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
async-trait = "0.1.88"
redis = { version = "0.24.0", features = ["tokio-comp", "connection-manager"] }
tokio-postgres = { version = "0.7.13", features = ["with-uuid-1", "with-chrono-0_4"] }
deadpool-postgres = "0.14.1"
chrono = { version = "0.4.41", features = ["serde"] }
rust_decimal = { version = "1.37.2", features = ["tokio-pg"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
