[package]
name = "proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
async-nats = "0.42.0"
config = "0.15.13"
reqwest = { version = "0.12.22", features = ["json"] }
serde = "1.0.219"
serde_json = "1.0.140"
tokio = "1.46.1"
bytes = "1.10.1"
futures = "0.3.31"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
async-trait = "0.1.88"
awc = "3.7.0"
